Add right click on enchantment gui to change book splitting behavior. Also add command for book splitting enchantment status.